--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,3 @@
-* {
-  border: 1px solid red;
-}
-
 .top {
     display: flex;
     align-items: center;
@@ -87,7 +83,7 @@ li {
 }
 
 .texto {
-    top: 50%;
+    top: 55%;
     font-size: clamp(1rem, 3vw, 1.5rem);
     font-weight: 400;
 }
@@ -328,7 +324,7 @@ li {
     background-image: url(imagenes/mercedesblack.jpg);
     background-size: cover;
     background-position: center;
-    position:relative;
+    position: relative;
     width: 100%;
     object-fit: cover;
     
@@ -336,9 +332,7 @@ li {
 
 }
 
-
-
-.m2 > h4 {
+.m2 > h2 {
     color: white;
     position: absolute;
     top: 15%;
@@ -354,10 +348,10 @@ li {
     max-width: 100%;
   }
 
-  .m2 > h4 {
+  .m2 > h2 {
     top: 10px;
     right: 25px;
-    font-size: 43px;
+    font-size: 40px;
   }
 }
 
@@ -482,11 +476,11 @@ label.checkbox-final a:hover {
 .footer-headers {
   display: grid;
   grid-template-columns: repeat(3,1fr);
-  gap: 60px;
   width: 100%;
   max-width: 100%;
   padding: 20px 5%;
   box-sizing: border-box;
+  justify-items: center;
 
 }
 
@@ -497,6 +491,7 @@ label.checkbox-final a:hover {
   color: rgb(243, 242, 242);
   margin-bottom: 10%;
   word-wrap: break-word;
+  align-items: flex-start;
 }
 
 .footer-column > a {
@@ -506,16 +501,15 @@ label.checkbox-final a:hover {
 @media (max-width:500px) {
   
   .footer-headers {
+    display: flex;
     gap: 40px;
     flex-direction: column;
-    text-align: center;
     margin-top: 30px;
-    margin-left: -20px;
-
-
   }
+  .footer-column {
+    align-items: center;
 }
-
+}
 .m3 {
     display: flex;
     flex-direction: column; 
@@ -631,5 +625,6 @@ label.checkbox-final a:hover {
     max-width: 100%;
   }
 }
+
 
 
