Cambios en el footer de la APP WEB

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
+*{
+  --primary-color: #ffffff;
+  --media-gap: 20px;
+}
+
+
 .top {
     display: flex;
     align-items: center;
@@ -70,7 +76,7 @@ li {
     left: 50%;
     transform: translateX(-50%);
     text-align: center;
-    color: white;
+    color: var(--primary-color);
     text-shadow: 0 2px 6px rgba(0,0,0,0.5);
     width: 90%;
     padding: 0 1rem;
@@ -160,7 +166,7 @@ li {
 
 
 .c1 { background: #ccc; }
-.c2 { background: white; }
+.c2 { background: var(--primary-color); }
 .c3 { background: #444; }
 .c4 { background: blue; }
 .c5 { background: black; }
@@ -236,7 +242,7 @@ li {
     background: var(--background-color, rgba(104, 103, 103, 0.404));
     padding: 30px 35px;
     border-radius: 12px;
-    color: white;
+    color: var(--primary-color);
     max-width: 280px;
 }
 
@@ -333,7 +339,7 @@ li {
 }
 
 .m2 > h2 {
-    color: white;
+    color: var(--primary-color);
     position: absolute;
     top: 15%;
     right: 10%;                 
@@ -495,7 +501,7 @@ label.checkbox-final a:hover {
 }
 
 .footer-column > a {
-  color: white;
+  color: var(--primary-color);
 }
 
 @media (max-width:500px) {
@@ -625,6 +631,37 @@ label.checkbox-final a:hover {
     max-width: 100%;
   }
 }
+
+
+
+@media (max-width:380px) {
+  .newsletter {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+  }
+
+  .input-box {
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+
+  .input-box input {
+    padding: 10px 14px;
+    font-size: 12px;
+    width: 50%;
+  }
+
+  .input-box button {
+    padding: 10px 14px;
+    font-size: 12px;
+  }
+}
+
 
 
 
